2015-06-04  Jesse Thaler <jthaler@mit.edu>

	* tex/lh2015_qg.tex   *** ADDED ***
	* tex/lh2015_qg.bib   *** ADDED ***
	* jheppub.sty         *** ADDED ***
	* jhep.bst            *** ADDED ***
	added tex file with description of classifier metric
		

2015-06-04  Gregory Soyez  <soyez@fastjet.fr>

	* README.md:
	set the scales to study to multiples of 2

	* MC_LHQG_EE.plot:
	updated to include the labels for what comes out of the latest
	version of the analysis

	* compute-efficiencies.py:
	added a quick python script that computes (as a distribution)
	  (Q(x)-G(x))^2/(Q(x)+G(x))
	for a distribution of x.
	Use as
	  compute-efficiencies.py quark.yoda gluon.yoda output.yoda
	On top of giving the histograms, it also prints the integrated
	efficiencies

	* MC_LHQG_EE.cc:
	revamped the analysis to
	. hardcode much less things
	. include log-scaled binned angulatrity histograms
	. include 3 values of R
	. added thrust (lin and log scales)
	. added total event multiplicity in 4 thrust bins

	* MC_LHQG_EE.plot:
	set the plots axes labels and title

	* README.md:
	added a few items concerning processes and setuops to run [+items
	for discussion]

	* MC_LHQG_EE.cc:                    *** ADDED ***
	Added a Rivet analysis for the ee studies
	It is mostly based on Deepak's MC_LHQG.cc analysis with a few
	fixes (see later entries above) and using directly FastJet to use
	ee anti-kt with the WTA axes.
	The code should automatically adjust the energy threshold for the
	jets to 0.4*Q.

2015-06-03  Gregory Soyez  <soyez@fastjet.fr>

	* Shapes.cc (fastjet_shapes):
	fixed typo in the switch to scalar pt

	* README.md:
	added a description of the first ee and pp studies to implement as
	Rivet routines

	* Shapes.{hh,cc}:
	added Jesse as an author of this

	* Shapes.{hh,cc}:         *** ADDED ***
	added a file containing basic shapes inplementation.
	So far only GeneralisedAngularity

	Shapes live in the fastjet_shapes namespace to reflect the fact