@@ -18,6 +18,9 @@ fileq = open(sys.argv[1])
 fileg = open(sys.argv[2])
 fileo = open(sys.argv[3], "w")
 
+# print what the output looks like
+#print "#observable   g^rej_20   g^rej_50   q^rej_20   q^rej_50   s^rej    I1/2    I0'    I1'    I0''    I1''   I1/2''"
+print '{0:21s} {1:8s} {2:8s} {3:8s} {4:8s} {5:8s} {6:8s} {7:8s}'.format("#observable","g^rej_20","g^rej_50","q^rej_20","q^rej_50","s^rej","I1/2","I1/2''")
 
 #------------------------------------------------------------------------
 # a couple of helpers
@@ -49,7 +52,7 @@ while 1:
     lineg = read_until_matching(fileg, re.compile("^# BEGIN"));
     fileo.write(lineq);
     lineq = read_until_matching(fileq, re.compile("^Path="));
-    label=lineq.rstrip("\n")
+    label=lineq.replace("Path=/MC_LHQG_EE/","").rstrip("\n")
     fileo.write(lineq)
     fileo.write("ScaledBy=1.0\n")
     fileo.write("Title=\n")
@@ -70,9 +73,21 @@ while 1:
     lineq=fileq.readline().rstrip()
     lineg=fileg.readline().rstrip()
     pattern_end=re.compile("^# END")
-    total_quality=0.0
-    wqtot=0.0
-    wgtot=0.0
+
+    # initialise the things we need to compute during the histogram browsing
+    wtotq=0.0  # for cumulative calculations and overflow calculations
+    wtotg=0.0  # for cumulative calculations and overflow calculations
+    I05=0.0
+    I05_second=0.0
+    # I00_prime=0.0
+    # I10_prime=0.0
+    # I00_second=0.0
+    # I10_second=0.0
+    qrej20 = 0.0
+    qrej50 = 0.0
+    grej20 = 0.0
+    grej50 = 0.0
+    srej   = 0.0
     while not pattern_end.match(lineq):
         # split into columns
         colsq = lineq.split()
@@ -81,23 +96,70 @@ while 1:
         # get the q and g probabilities and compute the quality
         # measure
         #    F=1/2 (Q-G)^2/(Q+G)
-        pq = float(colsq[2])
-        pg = float(colsg[2])
-        lo=float(colsq[0])
-        hi=float(colsq[1])
-        quality=0.0
-        wqtot += pq
-        wgtot += pg
-        if pq+pg>0: quality = 0.5*(pq-pg)*(pq-pg)/(pq+pg) 
-            #quality = 0.5*((pq-pg)*(pq-pg)-(pq+pg)*(pq+pg))/(pq+pg) 
-        total_quality += quality
+        wq = float(colsq[2])
+        wg = float(colsg[2])
+
+        # check if we cross one of the interesting percentiles
+
+        # test the cut "observed < cut" for 20%
+        if wtotq<=0.2 and wtotq+wq>0.2:
+            f=(0.2-wtotq)/wq
+            grej=1-(wtotg+f*wg)
+            if grej>grej20: grej20=grej
             
+        if wtotg<=0.2 and wtotg+wg>0.2:
+            f=(0.2-wtotg)/wg
+            qrej=1-(wtotq+f*wq)
+            if qrej>qrej20: qrej20=qrej
+
+        # test the cut "observed < cut" or "observed > cut" for 50%
+        if wtotq<=0.5 and wtotq+wq>0.5:
+            f=(0.5-wtotq)/wq
+            grej50=max(1-(wtotg+f*wg),wtotg+f*wg)
+
+        if wtotg<=0.5 and wtotg+wg>0.5:
+            f=(0.5-wtotg)/wg
+            qrej50=max(1-(wtotq+f*wq),wtotq+f*wq)
+
+        # test the cut "observed > cut" for 20%
+        if wtotq<=0.8 and wtotq+wq>0.8:
+            f=(0.8-wtotq)/wq
+            grej=(wtotg+f*wg)
+            if grej>grej20: grej20=grej
+            
+        if wtotg<=0.8 and wtotg+wg>0.8:
+            f=(0.8-wtotg)/wg
+            qrej=(wtotq+f*wq)
+            if qrej>qrej20: qrej20=qrej
+
+        # check the symmetric rejection. This corresponds to Q+G=1
+        if wtotq+wtotg<=1 and wtotq+wtotg+wq+wg>1:
+            f=(1-wtotq-wtotg)/(wq+wg)
+            srej=max(wtotq+f*wq, wtotg+f*wg)
+
+        # compute the measures based on mutual info
+        I05_second_local=0.5*(wq-wg)*(wq-wg)/(wq+wg) if wq+wg>0 else 0.0
+        I05_second += I05_second_local
+
+        I05+=(0.5*wq*math.log(2*wq/(wq+wg))/math.log(2.0) if wq>0 else 0.0)
+        I05+=(0.5*wg*math.log(2*wg/(wq+wg))/math.log(2.0) if wg>0 else 0.0)
+        # I00_prime +=(  if wq>0 else 0.0)
+        # I10_prime +=(  if wq>0 else 0.0)
+        # I00_second+=(  if wq>0 else 0.0)
+        # I10_second+=(  if wq>0 else 0.0)
+
+        # now we can update the totals
+        wtotq += wq
+        wtotg += wg
+
         # update directly in the quark columns
-        colsq[2] = str(quality)
-        colsq[3] = str(quality) # wrong but not crucial at this stage
-        colsq[4] = str(lo*quality) # wrong but not crucial at this stage
-        colsq[5] = str(lo*lo*quality) # wrong but not crucial at this stage
-        colsq[6] = str(int(100000*quality)) # again not ideal
+        lo=float(colsq[0])
+        q=I05_second_local
+        colsq[2] = str(q)
+        colsq[3] = str(q*q) # wrong but not crucial at this stage
+        colsq[4] = str(lo*q) # wrong but not crucial at this stage
+        colsq[5] = str(lo*lo*q) # wrong but not crucial at this stage
+        colsq[6] = str(int(100000*q)) # again not ideal
 
         strsep=" "
         fileo.write(strsep.join(colsq)+"\n")
@@ -108,12 +170,17 @@ while 1:
 
     fileo.write(lineq)
     fileo.write("\n")
-    # overflow contribution:
-    pq=1-wqtot
-    if (pq<0): pq=0
-    pg=1-wgtot
-    if (pg<0): pg=0
-    if pq+pg>0: total_quality += 0.5*(pq-pg)*(pq-pg)/(pq+pg) 
     
-    print label+": "+str(total_quality)
+    # overflow contribution:
+    wq=1-wtotq
+    if (wq<0): wq=0
+    wg=1-wtotg
+    if (wg<0): wg=0
+
+    I05_second += (0.5*(wq-wg)*(wq-wg)/(wq+wg) if wq+wg>0 else 0.0)
+
+    I05+=(0.5*wq*math.log(2*wq/(wq+wg))/math.log(2.0) if wq>0 else 0.0)
+    I05+=(0.5*wg*math.log(2*wg/(wq+wg))/math.log(2.0) if wg>0 else 0.0)
+    
+    print '{0:21s} {1:8.4f} {2:8.4f} {3:8.4f} {4:8.4f} {5:8.4f} {6:8.4f} {7:8.4f}'.format(label,grej20,grej50,qrej20,qrej50,srej,I05,I05_second)
     
