@@ -1,3 +1,9 @@
+2015-06-05  Gregory Soyez  <soyez@fastjet.fr>
+
+	* compute-efficiencies.py:
+	added a few quality measures according to Jesse's tex file
+	[only I1/2" saved as a histogram]
+
 2015-06-04  Jesse Thaler <jthaler@mit.edu>
 
 	* tex/lh2015_qg.tex   *** ADDED ***
@@ -5,7 +11,7 @@
 	* jheppub.sty         *** ADDED ***
 	* jhep.bst            *** ADDED ***
 	added tex file with description of classifier metric
-		
+
 
 2015-06-04  Gregory Soyez  <soyez@fastjet.fr>
 
